Bank-App-K8s/prod-k8s-bank/bank-api-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-api-cluster-service
spec:
  selector:
    app: bank-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
