Bank-App-K8s/prod-k8s-bank/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuser: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - gtnrjlkhm.shop
      - www.gtnrjlkhm.shop
      secretName: gtnrjlkhm-shop
  rules:
    - host: gtnrjlkhm.shop
      http:
        paths:
          - path: "/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank-ui-cluster-service
                port:
                  number: 80
          
          - path: "/api/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank-api-cluster-service
                port:
                  number: 8080
    
    - host: www.gtnrjlkhm.shop
      http:
        paths:
          - path: "/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank-ui-cluster-service
                port:
                  number: 80
          
          - path: "/api/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank-api-cluster-service
                port:
                  number: 8080
